--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.23",
