--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "license": "ISC",
   "scripts": {
-    "dev": "vite",
+    "dev": "yarn lint && vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
