style(all): lint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "yarn lint && vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "lint": "eslint --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx,js,jsx}\" --fix",
     "prettier": "prettier --write .",
     "test": "jest",
     "prepare": "husky install",
@@ -22,8 +22,8 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.5",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/test-utils": "^2.0.0-rc.12",
