--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "license": "ISC",
   "scripts": {
-    "dev": "yarn lint && vite",
+    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx,js,jsx}\" --fix",
@@ -12,7 +12,7 @@
     "commit": "cz"
   },
   "dependencies": {
-    "vue": "^3.2.6"
+    "vue": "^3.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -25,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
+    "@vue/compiler-sfc": "^3.2.8",
     "@vue/test-utils": "^2.0.0-rc.12",
     "babel-jest": "26.6.3",
     "commitizen": "^4.2.4",
@@ -40,7 +40,7 @@
     "prettier": "^2.3.2",
     "ts-jest": "26.5.6",
     "typescript": "^4.4.2",
-    "vite": "^2.5.1",
+    "vite": "^2.5.3",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.3.0"
   },
