--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx,js,jsx}\" --fix",
+    "lint:lint-staged": "lint-staged -c ./lint-staged.config.js",
     "prettier": "prettier --write .",
     "test": "jest",
     "prepare": "husky install",
@@ -37,6 +38,7 @@
     "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.0",
     "jest": "26.6.3",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "ts-jest": "26.5.6",
     "typescript": "^4.4.2",
