--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "test": "vitest"
   },
   "dependencies": {
-    "vue": "^3.2.26"
+    "ant-design-vue": "^3.0.0-beta.7",
+    "vue": "^3.2.27"
   },
   "devDependencies": {
-    "@types/node": "^17.0.6",
+    "@types/node": "^17.0.10",
     "@vitejs/plugin-vue": "^2.0.1",
-    "naive-ui": "^2.23.2",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
-    "vite": "^2.7.10",
-    "vitest": "^0.0.129",
-    "vue-tsc": "^0.30.1"
+    "unplugin-vue-components": "^0.17.13",
+    "vite": "^2.7.13",
+    "vitest": "^0.1.24",
+    "vue-tsc": "^0.30.6"
   }
 }
