--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-vue": "^2.0.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.13",
     "vite": "^2.7.13",
     "vitest": "^0.1.24",
