--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "ant-design-vue": "^3.0.0-beta.10",
     "pinia": "^2.0.11",
-    "vue": "^3.2.29",
+    "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.18",
-    "@vitejs/plugin-vue": "^2.1.0",
+    "@types/node": "^17.0.21",
+    "@vitejs/plugin-vue": "^2.2.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0",
     "jsdom": "^19.0.0",
+    "naive-ui": "^2.25.5",
     "prettier": "^2.5.1",
     "typescript": "~4.5.5",
-    "unplugin-auto-import": "^0.6.0",
-    "unplugin-vue-components": "^0.17.18",
-    "vite": "^2.7.13",
-    "vitest": "^0.4.1",
+    "unplugin-auto-import": "^0.6.1",
+    "unplugin-vue-components": "^0.17.21",
+    "vite": "^2.8.4",
+    "vitest": "^0.5.5",
     "vue-tsc": "^0.31.4"
   }
 }
